started with Observers and changed level loading

--- a/DiggerTheGame/DiggerTheGame.vcxproj
+++ b/DiggerTheGame/DiggerTheGame.vcxproj
@@ -184,13 +184,12 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="BulletComponent.cpp" />
     <ClCompile Include="BulletTimerComponent.cpp" />
-    <ClCompile Include="ConditionVersusComponent.cpp" />
+    <ClCompile Include="ConditionComponent.cpp" />
     <ClCompile Include="Emerald.cpp" />
     <ClCompile Include="EnemyPrefab.cpp" />
     <ClCompile Include="EnemySpawner.cpp" />
     <ClCompile Include="GameCollisionComponent.cpp" />
     <ClCompile Include="GameCollisionMngr.cpp" />
-    <ClCompile Include="ConditionSingleCoopComponent.cpp" />
     <ClCompile Include="Gold.cpp" />
     <ClCompile Include="GoldStateComponent.cpp" />
     <ClCompile Include="HealthComponent.cpp" />
@@ -213,17 +212,16 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="BulletComponent.h" />
     <ClInclude Include="BulletTimerComponent.h" />
-    <ClInclude Include="ConditionVersusComponent.h" />
+    <ClInclude Include="ConditionComponent.h" />
     <ClInclude Include="Emerald.h" />
     <ClInclude Include="EnemyPrefab.h" />
     <ClInclude Include="EnemySpawner.h" />
     <ClInclude Include="GameCollisionComponent.h" />
     <ClInclude Include="GameCollisionMngr.h" />
-    <ClInclude Include="ConditionSingleCoopComponent.h" />
     <ClInclude Include="Gold.h" />
     <ClInclude Include="GoldStateComponent.h" />
     <ClInclude Include="HealthComponent.h" />
-    <ClInclude Include="HealthObserver.h" />
+    <ClInclude Include="GameObserver.h" />
     <ClInclude Include="HighscoreComponent.h" />
     <ClInclude Include="HobbinComponent.h" />
     <ClInclude Include="HobbinState.h" />
