Collision checking for pickup happens in pickupComponent instead of in the Diggermovement which gave update problems

--- a/DiggerTheGame/DiggerTheGame.vcxproj
+++ b/DiggerTheGame/DiggerTheGame.vcxproj
@@ -196,6 +196,7 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     <ClCompile Include="HobbinComponent.cpp" />
     <ClCompile Include="HobbinState.cpp" />
     <ClCompile Include="NobbinState.cpp" />
+    <ClCompile Include="PickUpComponent.cpp" />
     <ClCompile Include="PlayerOne.cpp" />
     <ClCompile Include="PlayerTwo.cpp" />
     <ClCompile Include="DiggerTheGame.cpp" />
@@ -224,6 +225,7 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     <ClInclude Include="HobbinComponent.h" />
     <ClInclude Include="HobbinState.h" />
     <ClInclude Include="NobbinState.h" />
+    <ClInclude Include="PickUpComponent.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="PlayerTwo.h" />
     <ClInclude Include="GameCommands.h" />
