--- a/DiggerTheGame/DiggerTheGame.vcxproj.filters
+++ b/DiggerTheGame/DiggerTheGame.vcxproj.filters
@@ -98,6 +98,9 @@
     <ClCompile Include="HobbinState.cpp">
       <Filter>States</Filter>
     </ClCompile>
+    <ClCompile Include="PickUpComponent.cpp">
+      <Filter>Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PlayerOne.h">
@@ -179,6 +182,9 @@
       <Filter>States</Filter>
     </ClInclude>
     <ClInclude Include="GetOverlappedPlayer.h">
+      <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="PickUpComponent.h">
       <Filter>Components</Filter>
     </ClInclude>
   </ItemGroup>
