--- a/DiggerTheGame/DiggerTheGame.vcxproj.filters
+++ b/DiggerTheGame/DiggerTheGame.vcxproj.filters
@@ -101,6 +101,9 @@
     <ClCompile Include="PickUpComponent.cpp">
       <Filter>Components</Filter>
     </ClCompile>
+    <ClCompile Include="SubjectComponent.cpp">
+      <Filter>Components</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PlayerOne.h">
@@ -185,6 +188,9 @@
       <Filter>Components</Filter>
     </ClInclude>
     <ClInclude Include="PickUpComponent.h">
+      <Filter>Components</Filter>
+    </ClInclude>
+    <ClInclude Include="SubjectComponent.h">
       <Filter>Components</Filter>
     </ClInclude>
   </ItemGroup>
