--- a/DiggerTheGame/DiggerTheGame.vcxproj
+++ b/DiggerTheGame/DiggerTheGame.vcxproj
@@ -187,6 +187,7 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     <ClCompile Include="Emerald.cpp" />
     <ClCompile Include="EnemyPrefab.cpp" />
     <ClCompile Include="EnemySpawner.cpp" />
+    <ClCompile Include="FallingState.cpp" />
     <ClCompile Include="GameCollisionComponent.cpp" />
     <ClCompile Include="GameCollisionMngr.cpp" />
     <ClCompile Include="Gold.cpp" />
@@ -194,8 +195,9 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     <ClCompile Include="HealthComponent.cpp" />
     <ClCompile Include="HighscoreComponent.cpp" />
     <ClCompile Include="HobbinComponent.cpp" />
-    <ClCompile Include="HobbinState.cpp" />
-    <ClCompile Include="NobbinState.cpp" />
+    <ClCompile Include="HoverState.cpp" />
+    <ClCompile Include="IdleState.cpp" />
+    <ClCompile Include="CoinState.cpp" />
     <ClCompile Include="PickUpComponent.cpp" />
     <ClCompile Include="PlayerOne.cpp" />
     <ClCompile Include="PlayerTwo.cpp" />
@@ -215,17 +217,20 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     <ClInclude Include="Emerald.h" />
     <ClInclude Include="EnemyPrefab.h" />
     <ClInclude Include="EnemySpawner.h" />
+    <ClInclude Include="FallingState.h" />
     <ClInclude Include="GameCollisionComponent.h" />
     <ClInclude Include="GameCollisionMngr.h" />
     <ClInclude Include="GetOverlappedPlayer.h" />
     <ClInclude Include="Gold.h" />
+    <ClInclude Include="GoldState.h" />
     <ClInclude Include="GoldStateComponent.h" />
     <ClInclude Include="HealthComponent.h" />
     <ClInclude Include="GameObserver.h" />
     <ClInclude Include="HighscoreComponent.h" />
     <ClInclude Include="HobbinComponent.h" />
-    <ClInclude Include="HobbinState.h" />
-    <ClInclude Include="NobbinState.h" />
+    <ClInclude Include="HoverState.h" />
+    <ClInclude Include="IdleState.h" />
+    <ClInclude Include="CoinState.h" />
     <ClInclude Include="PickUpComponent.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="PlayerTwo.h" />
