Player texture rotate when going in a different direction

--- a/DiggerTheGame/DiggerTheGame.vcxproj
+++ b/DiggerTheGame/DiggerTheGame.vcxproj
@@ -208,6 +208,7 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     <ClCompile Include="LevelPrefab.cpp" />
     <ClCompile Include="ScreenManager.cpp" />
     <ClCompile Include="SubjectComponent.cpp" />
+    <ClCompile Include="TextureTransformComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AIMovementComponent.h" />
@@ -242,6 +243,7 @@ xcopy $(SolutionDir)3rdParty\SDL2_mixer-2.0.4\lib\$(PlatformTarget)\*.dll $(Outp
     <ClInclude Include="ScreenManager.h" />
     <ClInclude Include="ShootingDirComponent.h" />
     <ClInclude Include="SubjectComponent.h" />
+    <ClInclude Include="TextureTransformComponent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
